reports/04.03-estimation.log
Traceback (most recent call last):
  File "/Users/ethan/opt/miniconda3/envs/pythonbook2/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/ethan/opt/miniconda3/envs/pythonbook2/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/ethan/opt/miniconda3/envs/pythonbook2/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/ethan/opt/miniconda3/envs/pythonbook2/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/ethan/opt/miniconda3/envs/pythonbook2/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/Users/ethan/opt/miniconda3/envs/pythonbook2/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/ethan/opt/miniconda3/envs/pythonbook2/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/ethan/opt/miniconda3/envs/pythonbook2/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import pandas as pd
df = pd.DataFrame(
    {'Person 1': np.random.normal(loc=100,scale=15,size=5).astype(int),
     'Person 2': np.random.normal(loc=100,scale=15,size=5).astype(int),
     'Person 3': np.random.normal(loc=100,scale=15,size=5).astype(int),
     'Person 4': np.random.normal(loc=100,scale=15,size=5).astype(int),
     'Person 5': np.random.normal(loc=100,scale=15,size=5).astype(int),
     'Sample Mean': 
    }) 

df
------------------

[0;36m  Input [0;32mIn [5][0;36m[0m
[0;31m    'Sample Mean':[0m
[0m                 ^[0m
[0;31mSyntaxError[0m[0;31m:[0m expression expected after dictionary key and ':'

SyntaxError: expression expected after dictionary key and ':' (1377021315.py, line 8)

